added avatar routes
